iptables.conf
# Generated by xtables-save v1.8.2 on Sat Apr 11 23:32:45 2020
*filter
:INPUT ACCEPT [248:13447]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [127:8071]
-A INPUT -m limit --limit 2/sec -j LOG --log-prefix "INPUT DROP"
-A INPUT -i lo -j ACCEPT
-A INPUT -s 8.8.8.8/32 -i wlan0 -p icmp -j ACCEPT
-A INPUT -s 192.168.137.1/32 -i wlan0 -p icmp -j ACCEPT
-A INPUT -i wlan0 -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -s 192.168.100.0/24 -d 192.168.100.1/32 -i wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --sport 8027 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --sport 8066 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 1996 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --sport 67 -j ACCEPT
-A INPUT -i wlan0 -p tcp -m tcp --dport 68 -j ACCEPT
-A FORWARD -m limit --limit 3/sec -j LOG --log-prefix "FORWARD DROP"
-A OUTPUT -m limit --limit 2/sec -j LOG --log-prefix "OUTPUT DROP"
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 192.168.137.1/32 -o wlan0 -p icmp -j ACCEPT
-A OUTPUT -d 8.8.8.8/32 -o wlan0 -p icmp -j ACCEPT
-A OUTPUT -o wlan0 -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -s 192.168.100.1/32 -d 192.168.100.0/24 -o wlan0 -p udp -m udp --sport 53 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 8027 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 8066 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --sport 1996 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --dport 67 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp -m tcp --sport 68 -j ACCEPT
COMMIT
# Completed on Sat Apr 11 23:32:45 2020
